<?xml version="1.0"?>
<package>
  <name>smach</name>
  <version>2.0.1</version>
  <description>
    SMACH is a task-level architecture for rapidly creating complex robot
    behavior. At its core, SMACH is a ROS-independent Python library to build
    hierarchical state machines. SMACH is a new library that takes advantage of
    very old concepts in order to quickly create robust robot behavior with
    maintainable and modular code.
  </description>

  <maintainer email="gm130s@gmail.com">Isaac I. Y. Saito</maintainer>
  <license>BSD</license>

  <author>Jonathan Bohren</author>

<!--  <buildtool_depend>ament_python</buildtool_depend>-->

<exec_depend>rclpy</exec_depend>

<test_depend>ament_copyright</test_depend>
<test_depend>ament_flake8</test_depend>
<test_depend>ament_pep257</test_depend>
<test_depend>python3-pytest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
