<?xml version="1.0"?>
<package format="3">
  <name>smach_msgs</name>
  <version>2.0.1</version>
  <description>
    this package contains a set of messages that are used by the introspection
    interfaces for smach.
  </description>

  <maintainer email="gm130s@gmail.com">Isaac I. Y. Saito</maintainer>
  <license>BSD</license>

  <author>Jonathan Bohren</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

<build_depend>builtin_interfaces</build_depend>
 <build_depend>rosidl_default_generators</build_depend>
 <build_depend>std_msgs</build_depend>
 <exec_depend>builtin_interfaces</exec_depend>
 <exec_depend>rosidl_default_runtime</exec_depend>
 <exec_depend>std_msgs</exec_depend>

     <member_of_group>rosidl_interface_packages</member_of_group>

<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

